# centisat

./: .gitignore  .gitmodules  README.md  communications_board.md  interesting_cubesat_info.md  project_checklist.md
analysis/: README.md  stk_modeling.md
analysis/link_budget/: README.md
analysis/orbit/matlab/: README.md
analysis/orbit/results/: summary.md
analysis/orbit/stk/: notes.md  stk_power_export_guide.md
analysis/power/: README.md  power_budget.md
analysis/trade_studies/: README.md
docs/architecture/: hardware_overview.md  inhibit_and_deployment.md  project_scope.md  system_overview.md
docs/comms/: encoding.md  frequency_plan.md  link_budget.md  modulation.md
docs/firmware/: firmware_architecture.md  rtos_design.md
docs/hardware/: design_rules.md  pcb_guidelines.md  stackup.md
docs/research/: comms.md  firmware_references.md  interesting_cubesat_info.md  mechanical_ideas.md
firmware/: firmware.md
firmware/common/: README.md
firmware/comms/drivers/: CMakeLists.txt  si5351a.c  si5351a.h  si5351a_bringup.c
firmware/flight_controller/: README.md
firmware/ihu/: CMakeLists.txt  FreeRTOSConfig.h  README.md  pico_sdk_import.cmake
firmware/ihu/src/: CMakeLists.txt  main.c
firmware/ihu/src/cli/: cli.c  cli.h
firmware/ihu/src/config/: pinmap.h
firmware/ihu/src/drivers/: ltc4162.c  ltc4162.h
firmware/ihu/src/tasks/: blink_task.c  blink_task.h  console_task.c  console_task.h  eps_monitor_task.c  eps_monitor_task.h  i2c_task.c  i2c_task.h
hardware/: hardware.mm.md  hardware_vendors.md
hardware/CAD/: README.md
hardware/EPS/components/: LG Chem 18650 MJ1.par
hardware/comms/: README.md
hardware/comms/bringup/: rx_test_plan.md  si5351a_bringup_log.md  tripler_breadboard.md  tx_test_plan.md
hardware/comms/design/: altium_comms_schematic.md  ltspice_tx_chain_guide.md  overview.md  spice_output.txt  (+1 more)
hardware/eps/: README.md  eps.md  eps_v0.1.tgz
hardware/flight_controller/: README.md
hardware/ihu/: README.md
hardware/jlcpcb_parts/: jlcpcb_basic_parts_curl.sh  jlcpcb_parts_search.sh  update_jlcpcb_parts.py
hardware/payload/: README.md
hardware/pci104/: README.md
hardware/pci104-proto/: PCI-104-Template.kicad_pcb  PCI-104-Template.kicad_pro
hardware/pci104-template/: PCI-104-Template.kicad_pcb  PCI-104-Template.kicad_pro
hardware/proto_board/: proto_board.kicad_pcb  proto_board.kicad_pro  proto_board.kicad_sch
hardware/pv_panel/: README.md  fp-lib-table  pv_panel.kicad_pcb  pv_panel.kicad_pro  pv_panel.kicad_sch  pv_panel.step  sym-lib-table
rf/: README.md
rf/matching/: README.md
software/: firmware.md  freertos.md
system/: README.md
system/integration/: integration_plan.md  system_tests.md
system/interfaces/: board_to_board.md  comms_to_fc.md  comms_to_ihu.md  cskb_pinmap.md  data_interfaces.md  power_interfaces.md
system/protocols/: command.md  telemetry.md
templates/: test-plan-template.md
test/: README.md  validation.md
test/rf/: rx_validation.md  spectral_analysis.md  tx_validation.md
(+85 files in other folders)
